syntax = "proto3";
option csharp_namespace = "Siesa.SDK.Protos";
import "Protos/BusinessMessages.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

service SDK {
  rpc GetBusinesses (GetBusinessesRequest) returns (BusinessesResponse);
  rpc GetBusinessObj (GetBusinessObjRequest) returns (BusinessObjResponse);
  rpc GetDataBusinessObj (GetDataBusinessObjRequest) returns (LoadResult);
  rpc EntityFieldSearch (EntityFieldSearchRequest) returns (LoadResult);

  rpc SaveBusinessObj (SaveBusinessObjRequest) returns (SaveBusinessObjResponse);
  rpc ValidateAndSaveBusinessObj (ValidateAndSaveBusinessObjRequest) returns (ValidateAndSaveBusinessObjResponse);
  rpc DeleteBusinessObj (DeleteBusinessObjRequest) returns (DeleteBusinessObjResponse);

  rpc GetMenuGroups (GetMenuGroupsRequest) returns (MenuGroupsResponse);

  rpc GetMenuItems (GetMenuItemsRequest) returns (MenuItemsResponse);

  rpc ExecuteExposedMethod (ExposedMethodRequest) returns (ExposedMethodResponse);

  rpc SetBackendServices (SetBackendServicesRequest) returns (SetBackendServicesResponse);
}

message GetMenuGroupsRequest {
  string currentUserToken = 1;
  google.protobuf.Int32Value currentUserRowid = 2;
}

message MenuGroupsResponse {
  string response = 1;
}

message GetMenuItemsRequest {
  int32 groupId = 1;
  string currentUserToken = 2;
  google.protobuf.Int32Value currentUserRowid = 3;
}

message MenuItemsResponse {
  string response = 1;
}